--- a/_css/general.css
+++ b/_css/general.css
@@ -305,3 +305,14 @@ padding:0;
 li {
 display:inline;
 }
+
+/************ FOOTER  */
+footer {
+position: absolute;
+top: 1310px;
+border-top: 1px solid black;
+left: 0px;
+right: 0px;
+padding: 20px 0px;
+text-align: center;
+}
